{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 9,
  "lineage": "55309790-829e-c3db-1ccc-09330a91adea",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}